logic bugs fixed

--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="start-page">
-            <div class="instructions">
-                <h2>Instructions</h2>
-                <p>"Get a hand value close to 21 <b style="color: var(--secondary); font-weight: 600;">without exceeding
-                        it</b>. Start with two cards, choose to "hit" for more
-                    or "stand" to keep. The <b style="color: #3eba3e; font-weight: 600;">closest to 21</b> or if the
-                    dealer exceeds 21 wins."</p>
-            </div>
-            <button class="start-btn">START GAME</button>
+    <header>
+        <div class="header">
+            <h1>Blackjack. <span>Game</span></h1>
+            <img src="./assets/logo.png" alt="BlackJack Game">
         </div>
-
+    </header>
+    <div id="start-page">
+        <div class="instructions">
+            <h2>Instructions</h2>
+            <p>"Get a hand value close to 21 <b style="color: var(--secondary); font-weight: 600;">without exceeding
+                    it</b>. Start with two cards, choose to "hit" for more
+                or "stand" to keep. The <b style="color: #3eba3e; font-weight: 600;">closest to 21</b> or if the
+                dealer exceeds 21 wins."</p>
+        </div>
+        <button class="start-btn">START GAME</button>
+    </div>
+    <div class="container">
         <div class="game">
-            <div class="header">
-                <h1>Blackjack. <span>Game</span></h1>
-                <img src="./assets/logo.png" alt="">
-            </div>
             <div class="board">
                 <div class="dealer">
                     <h2></h2>
